
  - Neues Recht "Verknüpfte Belege", standardmäßig erlaubt. Betrifft alle
    Belege und die Projektstammdaten

  - Briefe sind jetzt auch für Lieferanten verfügbar. Die neuen Rechte dafür
    sind für Gruppen vergeben, die auch Einkaufsbelege bearbeiten dürfen.

  - Neuer Controller für Preisgruppen, die nun sortiert und ungültig gesetzt
    werden können.

Administrative Änderungen

  - Diverse Textsuchen werden jetzt durch eine neue Klasse Indizes
    beschleunigt. Dafür wird die benötigte Minimalversion von Postgres auf 9.1
    angehoben.

Bugfixes:

  - Pflichtenheftmodul: Es wurde eine Fehlermeldung angezeigt, wenn im
    rechten Teil des Fensters aktuell Textblöcke zu sehen sind,
    während Abschnitte oder Funktionsblöcke via Drag & Drop verschoben
    wurden.

2016-07-05 - Release 3.4.1

kleinere neue Features und Detailverbesserungen:

  - Erweitern der Zahlungsbedingungen um unterschiedliche Texte für
    Angebote/Aufträge auf der einen Seite und Rechnungen auf der
    anderen Seite.
  - Auftrag um Druckvariante Gelangensbestätigung erweitert.
  - Lagereingangs-Typ 'gefertigt' hinzugefügt.
  - Fertigungsdatum von Erzeugnissen und Bestandteilen von Erzeugnissen
    in Lagerbuchungen mitprotokollieren (Tagesdatum der Fertigung).
  - Wiederkehrende Rechnungen können nun automatisch per E-Mail
    verschickt werden.
  - Die meisten Suchmasken ignorieren nun bei Teilwortsuchen führende
    und anhängende Leerzeichen.
  - Abteilung in Verkauf->Berichte-Rechnungen anzeigen lassen.
  - Customer-Picker beim Projekt erzeugen eingebaut.
  - Es gibt jetzt Schnellsuchen zu den meisten Belegen und Stammdaten in der
    Leiste am oberen Rand, konfigurierbar in der Mandantenkonfiguration (Details s.u.)
  - Wird in der Konfigurations-Datei (kivitendo.conf)
    [mail_delivery]/method auf einen leeren Wert gesetzt wird jetzt der
    Mailversand komplett ausgeschaltet, vorher wurde bei
    Werten die nicht 'sendmail' oder 'smtp' sind SMTP als Vorauswahl benutzt.