@@ -1,0 +1,40 @@
+[%- USE LxERP %]
+[%- USE T8 %]
+[%- USE L %]
+[%- USE HTML %]
+[%- USE P %]
+[% SET qty_round = 2 %]
+<table cellpadding="3px">
+ <tr class="listheading">
+  <th>[%- LxERP.t8("Part")           %]</th>
+  <th>[%- LxERP.t8("Customer")       %]</th>
+  <th>[%- LxERP.t8("Order")          %]</th>
+  <th>[%- LxERP.t8("Transdate")      %]</th>
+  <th>[%- LxERP.t8("Qty")            %]</th>
+  <th>[%- LxERP.t8("Delivered")      %]</th>
+  <th>[%- LxERP.t8("Price")          %]</th>
+  <th>[%- LxERP.t8("Discount")       %] %</th>
+  <th>[%- LxERP.t8("Delivery Order") %]</th>
+  [% IF FORM.show_images %]
+  <th>[%- LxERP.t8("Image")          %]</th>
+  [% END %]
+ </tr>
+ [% FOREACH order_item = SELF.orderitems %]
+ <tr id="tr_[% loop.count %]" class="listrow[% loop.count % 2 %]">
+  <td>                 [% P.part(order_item.part, no_link => 0)               %]</td>
+  <td>                 [% P.customer(order_item.order.customer, no_link => 0) %]</td>
+  <td class="numeric"> [% P.sales_order(order_item.order, no_link => 0)       %]</td>
+  <td>                 [% order_item.order.transdate.to_kivitendo             %]</td>
+  <td class="numeric [% IF order_item.delivered_qty == order_item.qty %]shipped[% ELSE %]not_shipped[% END %]">
+    [% LxERP.format_amount(order_item.qty, qty_round) %] [% order_item.unit | html %]
+  </td>
+  <td class="numeric"> [% LxERP.format_amount(order_item.delivered_qty, qty_round) %] [% order_item.unit | html %] </td>
+  <td class="numeric"> [% order_item.sellprice_as_number                      %]</td>
+  <td class="numeric"> [% order_item.discount_as_percent                      %]</td>
+  <td>                 [% order_item.deliveryorders                           %]</td>
+  [% IF FORM.show_images %]
+  <td> [% IF order_item.part.image %]<a href="[% order_item.part.image | html %]" target="_blank"><img height="32" border="0" src="[% order_item.part.image | html %]"/></a>[% END %]</td>
+  [% END %]
+ </tr>
+ [% END %]
+</table>
